[package]
name = "latexml_engine"
version = "0.5.0"
edition = "2024"
license = "CC0-1.0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Core TeX/LaTeX engine bindings (Base, TeX_*, eTeX, pdfTeX, plain, latex pools). Split out of latexml_package to reduce CI compile-time RAM peaks."

[lints]
workspace = true

[lib]
crate-type = ["lib"]

[build-dependencies]
# Compress the bundled TeXLive kernel dumps at build time so the
# binary carries ~870 KB instead of ~7.5 MB of `.rodata` (DEP-12,
# 2026-05-18). gzip on the dumps' record-based text gets ~4.7×.
flate2 = "1"

[features]
# Source-map precision build — propagates to latexml_core so the token-origin
# field resolves in this crate's token-macro expansions. Enable via
# `latexml_oxide/token-locators`. See docs/performance/SOURCE_PROVENANCE.md §3.1.1.
token-locators = ["latexml_core/token-locators"]

[dependencies]
once_cell = "1.17.0"
regex = { version = "1.7.1", default-features = false, features = ["std", "perf", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script"] }  # DEP-10
log = "0.4"
libxml = "0.3.16"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
unicode-normalization = "0.1.7"
rustc-hash = "2.0.0"
# Runtime gunzip of the embedded dumps from `build.rs` (DEP-12).
# Same flate2 instance the binary already pulls via zip/tar.
flate2 = "1"
latexml_codegen = { path = "../latexml_codegen", version = "0.4.0" }
latexml_core = { path = "../latexml_core", version = "0.4.0" }
