[package]
name = "latexml_math_parser"
version = "0.3.0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
edition = "2021"

[lib]
name = "latexml_math_parser"
crate-type = ["lib"]

[features]
# Source-map precision build — propagates to latexml_core. Enable via
# `latexml_oxide/token-locators`. See docs/SOURCE_PROVENANCE.md §3.1.1.
token-locators = ["latexml_core/token-locators"]

[dependencies]
libxml = "0.3.12"
regex = { version = "1.7.1", default-features = false, features = ["std", "perf", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script"] }  # DEP-10
log = "0.4"
marpa = { git = "https://github.com/dginev/marpa" }
once_cell = "1.17.0"
rustc-hash = "2.0.0"
latexml_core = { path = "../latexml_core" }
stacker = "0.1.24"
