[package]
name = "latexml_math_parser"
version = "0.3.0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
edition = "2024"
license = "CC0-1.0"
description = "Marpa-style ambiguous math-expression parser for latexml_oxide"

[lints]
workspace = true

[lib]
name = "latexml_math_parser"
crate-type = ["lib"]

[features]
# Source-map precision build — propagates to latexml_core. Enable via
# `latexml_oxide/token-locators`. See docs/performance/SOURCE_PROVENANCE.md §3.1.1.
token-locators = ["latexml_core/token-locators"]

[dependencies]
libxml = "0.3.16"
regex = { version = "1.7.1", default-features = false, features = ["std", "perf", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script"] }  # DEP-10
log = "0.4"
# dginev/marpa fork, published as `marpa-asf`; `package` alias keeps `marpa::`.
marpa = { package = "marpa-asf", version = "0.3.0" }
once_cell = "1.17.0"
rustc-hash = "2.0.0"
latexml_core = { path = "../latexml_core", version = "0.4.0" }
# stack-growth guard now goes through latexml_core::stack_guard (one configurable
# home for the maybe_grow params); no direct stacker dependency needed here.
