[package]
name = "latexml"
version = "0.5.0"
edition = "2021"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
license = "CC0"
homepage = "https://github.com/dginev/latexml-oxide"
repository = "https://github.com/dginev/latexml-oxide"
readme = "README.md"
description = "A TeX to XML/HTML/ePub converster: a LaTeXML reimplementation in Rust"
default-run = "latexml_oxide"

[[bin]]
name = "latexml_oxide"
path = "bin/latexml_oxide.rs"

[[bin]]
name = "latexmlmath_oxide"
path = "bin/latexmlmath_oxide.rs"

[[bin]]
name = "genschema_oxide"
path = "bin/genschema_oxide.rs"

[[bin]]
name = "cortex_worker"
path = "bin/cortex_worker.rs"
required-features = ["cortex"]

[features]
default = ["test-utils"]
# Enable building the cortex_worker binary (ZMQ-based CorTeX dispatcher client).
# Off by default because pericortex pulls in zmq + zeromq-src (C library build),
# rand, chrono, tempdir, walkdir — ~15 minutes of CI compile time we don't pay
# for the core latexml_oxide / latexmlmath_oxide / latexmlpost_oxide binaries.
cortex = ["dep:pericortex", "dep:hostname"]
# Compile the integration-test harness in `src/util/test.rs`. On by default
# so `cargo test` and `cargo build` (no flags) work as expected. Distribution
# builds should pass `--no-default-features` (or `--no-default-features
# --features cortex` for the worker) to drop `glob` and `phf` from the
# binary's dependency graph (audit DEP-02, 2026-05-18). Saves the compile
# cost of `phf` + `phf_macros` (proc-macro) + their `phf_generator` /
# `phf_shared` build-deps, plus a small `.text` footprint.
test-utils = ["dep:glob", "dep:phf"]

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"
# Used by latexml_oxide / cortex_worker binaries for `getrusage(RUSAGE_CHILDREN)`
# child-process CPU/memory accounting in telemetry (see *.rs `peak_rss_kb`).
libc = "0.2"
# `default-features = false` drops tar's optional `xattr` extended-attribute
# support — we only use `tar::Archive::new(...).unpack(dest)` for arxiv
# .tar.gz extraction; extended-attribute round-tripping on .tex sources
# is not needed. Removes the `xattr` crate from the dep tree.
tar = { version = "0.4", default-features = false }
# Only deflate is actually used (CompressionMethod::Deflated). Disabling the
# default features drops aes, bzip2, zstd, lzma-rust2, ppmd-rust, pbkdf2,
# sha1, sha2, hmac, cipher, password-hash — a big CI compile-time win.
zip = { version = "8", default-features = false, features = ["deflate-flate2", "time"] }
# DEP-06 (2026-05-22): bumped to indexmap 2.14.0 (#234). Earlier we pinned
# 2.13.1 to keep hashbrown unified at 0.16.x across the workspace, since
# 2.14.0 had moved to hashbrown 0.17 and duplicated against string-
# interner 0.20's 0.16 pin. The dep tree is now compatible — leave the
# exact pin so all crates resolve to a single indexmap version.
indexmap = "=2.14.0"
tempfile = "3"
log = "0.4"
libxml = "0.3.11"
once_cell = "1.17.0"
regex = { version = "1.7.1", default-features = false, features = ["std", "perf", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script"] }  # DEP-10
glob = { version = "0.3", optional = true }
phf = { version = "0.13.1", features = ["macros"], optional = true }
rustc-hash = "2.0.0"
latexml_codegen = {path = "../latexml_codegen"}
latexml_core = {path = "../latexml_core"}
latexml_engine = {path = "../latexml_engine"}
latexml_package = {path = "../latexml_package"}
latexml_contrib = {path = "../latexml_contrib"}
latexml_math_parser = {path = "../latexml_math_parser"}
latexml_post = {path = "../latexml_post"}
pericortex = { git = "https://github.com/dginev/cortex-peripherals.git", optional = true }
hostname = { version = "0.4", optional = true }
# Replaces glibc malloc. glibc's per-arena mutex is a hard scaling bottleneck
# for multi-process workloads like cortex_worker (arena contention via futex).
# mimalloc gives each thread a private heap with lock-free fast paths.
mimalloc = { version = "0.1", default-features = false }