[package]
name = "latexml"
version = "0.7.2"
edition = "2024"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/dginev/latexml-oxide"
repository = "https://github.com/dginev/latexml-oxide"
readme = "README.md"
description = "A TeX to XML/HTML/ePub converster: a LaTeXML reimplementation in Rust"
default-run = "latexml_oxide"

[lints]
workspace = true

# indexmap is declared here only to pin a single workspace-wide version
# (DEP-06 #234); this crate uses it transitively, not directly, so cargo-machete
# reports a false positive.
[package.metadata.cargo-machete]
ignored = ["indexmap"]

[[bin]]
name = "latexml_oxide"
path = "bin/latexml_oxide.rs"

[[bin]]
name = "latexmlmath_oxide"
path = "bin/latexmlmath_oxide.rs"

[[bin]]
name = "genschema_oxide"
path = "bin/genschema_oxide.rs"

[[bin]]
name = "cortex_worker"
path = "bin/cortex_worker.rs"
required-features = ["cortex"]

[features]
default = ["test-utils", "runtime-bindings"]
# Enable building the cortex_worker binary (ZMQ-based CorTeX dispatcher client).
# Off by default because pericortex pulls in zmq + zeromq-src (C library build),
# rand, chrono, tempdir, walkdir — ~15 minutes of CI compile time we don't pay
# for the core latexml_oxide / latexmlmath_oxide / latexmlpost_oxide binaries.
cortex = ["dep:pericortex", "dep:hostname"]
# Use jemalloc instead of mimalloc as the global allocator in `cortex_worker`.
# jemalloc returns freed memory to the OS via background decay, keeping a
# long-lived worker's RSS bounded to the current paper (see the `tikv-jemallocator`
# dep note). Intended to pair with `cortex`: `--features cortex,jemalloc`.
jemalloc = ["dep:tikv-jemallocator"]
# Compile the integration-test harness in `src/util/test.rs`. On by default
# so `cargo test` and `cargo build` (no flags) work as expected. Distribution
# builds should pass `--no-default-features` (or `--no-default-features
# --features cortex` for the worker) to drop `glob` and `phf` from the
# binary's dependency graph (audit DEP-02, 2026-05-18). Saves the compile
# cost of `phf` + `phf_macros` (proc-macro) + their `phf_generator` /
# `phf_shared` build-deps, plus a small `.text` footprint.
test-utils = ["dep:glob", "dep:phf"]
# Source-map precision build (docs/SOURCE_PROVENANCE.md §3.1.1): widen `Token`
# with a per-token origin handle (8→12) so each token carries its exact source
# start through expansion to digestion. OFF by default. Propagates to every
# token-constructing crate so the cfg resolves consistently inside their
# (cross-crate) token-macro expansions. The knob downstream consumers flip.
token-locators = [
  "latexml_core/token-locators",
  "latexml_engine/token-locators",
  "latexml_package/token-locators",
  "latexml_contrib/token-locators",
  "latexml_math_parser/token-locators",
]
# Runtime (Rhai) script bindings (docs/script_bindings_plan.md) — propagates
# to latexml_contrib (the only crate that embeds Rhai). ON by default:
# downstream consumers of the single-file binary customize bindings without
# recompiling. Distribution builds use `--no-default-features --features
# runtime-bindings` (drop test-utils, keep this).
runtime-bindings = ["latexml_contrib/runtime-bindings"]
# Back-compat alias for the original feature name.
script-bindings = ["runtime-bindings"]

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"
# Used by latexml_oxide / cortex_worker binaries for `getrusage(RUSAGE_CHILDREN)`
# child-process CPU/memory accounting in telemetry (see *.rs `peak_rss_kb`).
libc = "0.2"
serde_json = "1"
# `default-features = false` drops tar's optional `xattr` extended-attribute
# support — we only use `tar::Archive::new(...).unpack(dest)` for arxiv
# .tar.gz extraction; extended-attribute round-tripping on .tex sources
# is not needed. Removes the `xattr` crate from the dep tree.
tar = { version = "0.4", default-features = false }
# Only deflate is actually used (CompressionMethod::Deflated). Disabling the
# default features drops aes, bzip2, zstd, lzma-rust2, ppmd-rust, pbkdf2,
# sha1, sha2, hmac, cipher, password-hash — a big CI compile-time win.
zip = { version = "8", default-features = false, features = ["deflate-flate2", "time"] }
# DEP-06 (2026-05-22): bumped to indexmap 2.14.0 (#234). Earlier we pinned
# 2.13.1 to keep hashbrown unified at 0.16.x across the workspace, since
# 2.14.0 had moved to hashbrown 0.17 and duplicated against string-
# interner 0.20's 0.16 pin. The dep tree is now compatible — leave the
# exact pin so all crates resolve to a single indexmap version.
indexmap = "=2.14.0"
tempfile = "3"
log = "0.4"
libxml = "0.3.14"
once_cell = "1.17.0"
regex = { version = "1.7.1", default-features = false, features = ["std", "perf", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script"] }  # DEP-10
glob = { version = "0.3", optional = true }
phf = { version = "0.13.1", features = ["macros"], optional = true }
rustc-hash = "2.0.0"
latexml_codegen = {path = "../latexml_codegen"}
latexml_core = {path = "../latexml_core"}
latexml_engine = {path = "../latexml_engine"}
latexml_package = {path = "../latexml_package"}
latexml_contrib = {path = "../latexml_contrib"}
latexml_math_parser = {path = "../latexml_math_parser"}
latexml_post = {path = "../latexml_post"}
pericortex = { git = "https://github.com/dginev/cortex-peripherals.git", optional = true }
hostname = { version = "0.4", optional = true }
# Replaces glibc malloc. glibc's per-arena mutex is a hard scaling bottleneck
# for multi-process workloads like cortex_worker (arena contention via futex).
# mimalloc gives each thread a private heap with lock-free fast paths.
mimalloc = { version = "0.1", default-features = false }
# Alternative allocator for the persistent `cortex_worker` fleet (enable with
# `--features jemalloc`). jemalloc's decay-based purging returns freed pages to
# the OS automatically (a background thread, tunable via `*_decay_ms`), so a
# long-lived worker's RSS tracks the CURRENT paper instead of mimalloc's
# retain-the-high-water default — the property a persistent conversion worker
# needs. Used for the mimalloc-vs-jemalloc A/B and the recommended harness build.
tikv-jemallocator = { version = "0.7", optional = true }

# Metadata for `cargo deb` (https://github.com/kornelski/cargo-deb).
# Drives `tools/make_release.sh` step 6: `cargo deb --no-build --profile maxperf -p latexml`.
# Runtime apt dependencies match the README's "Build from source" recipe minus
# the `-dev` headers (those are compile-time only). The deb only ships the
# `latexml_oxide` binary — XSLT, CSS, JavaScript and RelaxNG schemas are
# embedded at build time, so no `resources/` payload is shipped alongside.
[package.metadata.deb]
name = "latexml-oxide"
maintainer = "Deyan Ginev <deyan.ginev@gmail.com>"
copyright = "2016-2026 Deyan Ginev. CC0 1.0 Universal."
license-file = ["../LICENSE", "0"]
extended-description = """\
A Rust port of LaTeXML — converts LaTeX documents to accessible web
formats (HTML5, XHTML, EPUB3, JATS). Drop-in replacement for the
upstream Perl tool with significant throughput improvements on the
arXiv corpus."""
# `$auto` runs dpkg-shlibdeps on the packaged binary, deriving the exact,
# versioned linked-library deps so the list never drifts from what we link.
# Since the release build STATICALLY links libxml2, libxslt and libkpathsea
# (tools/build_static_libxml.sh + build_static_kpathsea.sh), those no longer
# appear — `$auto` resolves to just the glibc family (libc6, libgcc-s1), and the
# package carries NO versioned libxml2/libxslt SONAME dependency (so it installs
# on any libxml2 era — .so.2 and .so.16 alike). The remaining entries are
# appended manually — they are runtime data/tools, not linked libraries:
#   * imagemagick — our PRIMARY graphics processor (`convert`, the most-invoked
#     graphics tool).
#   * mupdf-tools — `mutool`, our PDF graphics processor.
#     Both are promoted to hard Depends so graphics handling works out of the
#     box rather than silently degrading.
#   * texlive-* — the texmf trees kpsewhich resolves against.
depends = "$auto, imagemagick, mupdf-tools, texlive-latex-base, texlive-latex-extra, texlive-science"
# Secondary graphics/PDF helpers are SHELLED OUT at runtime (not linked) and only
# needed for specific source content, so they stay in Recommends: pdftocairo
# (poppler-utils), gs/ps2pdf (ghostscript), dvipng.
recommends = "poppler-utils, ghostscript, dvipng"
# inkscape (SVG conversion) is optional and pulls a large GTK stack — keep it a
# soft suggestion rather than a recommend.
suggests = "inkscape"
section = "tex"
priority = "optional"
assets = [
  ["../target/maxperf/latexml_oxide", "usr/bin/", "755"],
  ["../README.md", "usr/share/doc/latexml-oxide/README", "644"],
  ["../CHANGELOG.md", "usr/share/doc/latexml-oxide/CHANGELOG", "644"],
  ["../LICENSE", "usr/share/doc/latexml-oxide/copyright", "644"],
]