[package]
name = "latexml"
version = "0.7.4"
edition = "2024"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/dginev/latexml-oxide"
repository = "https://github.com/dginev/latexml-oxide"
# Point crates.io at the self-hosted rustdoc (deployed by .github/workflows/
# rustdoc.yml to gh-pages) so the crate page always links to working docs,
# independent of whether the docs.rs sandbox build succeeds. Served publicly
# once the repo is public.
documentation = "https://dginev.github.io/latexml-oxide/latexml/"
# `latexml_oxide/README.md` is a SYMLINK to the workspace-root README.md — do not
# replace it with a copy. `cargo package` cannot reach a `../` path, so the root
# README (which GitHub serves, and which is the single source of truth) is
# unreachable from this crate dir; without the symlink `cargo publish -p latexml`
# fails outright: "readme `README.md` does not appear to exist". Cargo dereferences
# the symlink and packages the real 12 KB content, verified in the tarball.
# A copy here would be a second README to keep in step, i.e. guaranteed drift.
readme = "README.md"
description = "A TeX to XML/HTML/ePub converter: a LaTeXML reimplementation in Rust"
keywords = ["latex", "tex", "html", "mathml", "converter"]
categories = ["command-line-utilities", "text-processing", "science"]
default-run = "latexml_oxide"
# The regression corpus is 1342 of this crate's 1372 packageable files and ~19.5 MiB
# of its ~20 MiB: `cargo publish` produced a 13.6 MiB tarball against crates.io's
# hard 10 MiB cap and was rejected (`413 Payload Too Large: max upload size is
# 10485760` from the backend; the CDN in front of it reports the same oversized
# write as an unhelpful `503 backend write error`). Dropping it lands the crate at
# ~600 KB. `--dry-run` cannot catch this — it stops before the upload, so the size
# limit is only ever enforced by the real publish.
#
# Safe to exclude: no explicit `[[test]]` targets (the 50 harnesses are auto-
# discovered, so the packaged crate simply has none), and `build.rs` only wires git
# hooks and no-ops without a `.git`. Consumers get the library and binaries; the
# corpus stays in git, which is where the suite is meant to run. The one `src/` unit
# test that scans the corpus at RUN time (`exemption_audit`) locates it via
# `CARGO_MANIFEST_DIR` and skips when it is absent, so a downstream `cargo test` on
# the packaged crate stays green (issue #301). Do NOT exclude the fixture subdirs
# while keeping `tests/*.rs`: the `testable` proc-macro scans the corpus at compile
# time, so a half-excluded tree would fail `cargo test` on the packaged crate.
exclude = ["tests/"]

[lints]
workspace = true

# docs.rs builds in a no-network sandbox with a fixed system-library image:
# libxml2/libxslt come from that image, and kpathsea 0.3 falls back to its
# subprocess backend when libkpathsea is absent, so the default feature set
# builds there. Pin one target so docs build once. If a docs.rs build ever
# regresses, `documentation` (above) still links to the gh-pages rustdoc.
# See docs/release/CRATES_IO_PUBLISH.md.
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# indexmap is declared here only to pin a single workspace-wide version
# (DEP-06 #234); this crate uses it transitively, not directly, so cargo-machete
# reports a false positive.
[package.metadata.cargo-machete]
ignored = ["indexmap"]

[[bin]]
name = "latexml_oxide"
path = "bin/latexml_oxide.rs"

[[bin]]
name = "latexmlmath_oxide"
path = "bin/latexmlmath_oxide.rs"

[[bin]]
name = "genschema_oxide"
path = "bin/genschema_oxide.rs"

[[bin]]
name = "cortex_worker"
path = "bin/cortex_worker.rs"
required-features = ["cortex"]

[features]
default = ["test-utils", "runtime-bindings"]
# Enable building the cortex_worker binary (ZMQ-based CorTeX dispatcher client).
# Off by default because pericortex pulls in zmq + zeromq-src (C library build),
# rand, chrono, tempdir, walkdir — ~15 minutes of CI compile time we don't pay
# for the core latexml_oxide / latexmlmath_oxide / latexmlpost_oxide binaries.
cortex = ["dep:pericortex", "dep:hostname"]
# Use jemalloc instead of mimalloc as the global allocator in `cortex_worker`.
# jemalloc returns freed memory to the OS via background decay, keeping a
# long-lived worker's RSS bounded to the current paper (see the `tikv-jemallocator`
# dep note). Intended to pair with `cortex`: `--features cortex,jemalloc`.
jemalloc = ["dep:tikv-jemallocator"]
# Heap-allocation profiling: swap the global allocator for dhat's tracking
# allocator and write a `dhat-heap.json` (viewable at https://nnethercote.github.io/dh_view/dh_view.html)
# pinpointing the call sites driving allocation count/bytes. Diagnostic only —
# off by default, slows execution. Build: `--features dhat-heap`.
dhat-heap = ["dep:dhat"]
# Compile the integration-test harness in `src/util/test.rs`. On by default
# so `cargo test` and `cargo build` (no flags) work as expected. Distribution
# builds should pass `--no-default-features` (or `--no-default-features
# --features cortex` for the worker) to drop `glob` and `phf` from the
# binary's dependency graph (audit DEP-02, 2026-05-18). Saves the compile
# cost of `phf` + `phf_macros` (proc-macro) + their `phf_generator` /
# `phf_shared` build-deps, plus a small `.text` footprint.
test-utils = ["dep:glob", "dep:phf"]
# Source-map precision build (docs/performance/SOURCE_PROVENANCE.md §3.1.1): widen `Token`
# with a per-token origin handle (8→12) so each token carries its exact source
# start through expansion to digestion. OFF by default. Propagates to every
# token-constructing crate so the cfg resolves consistently inside their
# (cross-crate) token-macro expansions. The knob downstream consumers flip.
token-locators = [
  "latexml_core/token-locators",
  "latexml_engine/token-locators",
  "latexml_package/token-locators",
  "latexml_contrib/token-locators",
  "latexml_math_parser/token-locators",
]
# Static in-process libkpathsea on windows-msvc (forwards to
# latexml_core/kpathsea-build-from-source → the kpathsea crate's build-from-source).
# Off by default; inert off windows-msvc. The Windows distribution build opts in
# to drop the subprocess `ls-R`-cache-build cost (~0.5 s/conversion). Requires the
# root [patch] on kpathsea until rust-kpathsea#21 publishes.
kpathsea-build-from-source = ["latexml_core/kpathsea-build-from-source"]
# Runtime (Rhai) script bindings (docs/parity/script_bindings_plan.md) — propagates
# to latexml_contrib (the only crate that embeds Rhai). ON by default:
# downstream consumers of the single-file binary customize bindings without
# recompiling. Distribution builds use `--no-default-features --features
# runtime-bindings` (drop test-utils, keep this).
runtime-bindings = ["latexml_contrib/runtime-bindings"]

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"
# Used by latexml_oxide / cortex_worker binaries for `getrusage(RUSAGE_CHILDREN)`
# child-process CPU/memory accounting in telemetry (see *.rs `peak_rss_kb`).
libc = "0.2"
serde_json = "1"
# `default-features = false` drops tar's optional `xattr` extended-attribute
# support — we only use `tar::Archive::new(...).unpack(dest)` for arxiv
# .tar.gz extraction; extended-attribute round-tripping on .tex sources
# is not needed. Removes the `xattr` crate from the dep tree.
tar = { version = "0.4", default-features = false }
# Only deflate is actually used (CompressionMethod::Deflated). Disabling the
# default features drops aes, bzip2, zstd, lzma-rust2, ppmd-rust, pbkdf2,
# sha1, sha2, hmac, cipher, password-hash — a big CI compile-time win.
zip = { version = "8", default-features = false, features = ["deflate-flate2", "time"] }
# DEP-06 (2026-05-22): bumped to indexmap 2.14.0 (#234). Earlier we pinned
# 2.13.1 to keep hashbrown unified at 0.16.x across the workspace, since
# 2.14.0 had moved to hashbrown 0.17 and duplicated against string-
# interner 0.20's 0.16 pin. The dep tree is now compatible — leave the
# exact pin so all crates resolve to a single indexmap version.
indexmap = "=2.14.0"
tempfile = "3"
log = "0.4"
libxml = "0.3.16"
once_cell = "1.17.0"
regex = { version = "1.7.1", default-features = false, features = ["std", "perf", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script"] }  # DEP-10
glob = { version = "0.3", optional = true }
phf = { version = "0.14.0", features = ["macros"], optional = true }
rustc-hash = "2.0.0"
latexml_codegen = {path = "../latexml_codegen", version = "0.4.0"}
latexml_core = {path = "../latexml_core", version = "0.4.0"}
latexml_engine = {path = "../latexml_engine", version = "0.5.0"}
latexml_package = {path = "../latexml_package", version = "0.5.0"}
latexml_contrib = {path = "../latexml_contrib", version = "0.3.0"}
latexml_math_parser = {path = "../latexml_math_parser", version = "0.3.0"}
latexml_post = {path = "../latexml_post", version = "0.3.0"}
pericortex = { version = "0.2.8", optional = true }
hostname = { version = "0.4", optional = true }
# Replaces glibc malloc. glibc's per-arena mutex is a hard scaling bottleneck
# for multi-process workloads like cortex_worker (arena contention via futex).
# mimalloc gives each thread a private heap with lock-free fast paths.
mimalloc = { version = "0.1", default-features = false }
# Heap-profiling allocator, enabled only under the `dhat-heap` feature (diagnostic).
dhat = { version = "0.3", optional = true }
# Alternative allocator for the persistent `cortex_worker` fleet (enable with
# `--features jemalloc`). jemalloc's decay-based purging returns freed pages to
# the OS automatically (a background thread, tunable via `*_decay_ms`), so a
# long-lived worker's RSS tracks the CURRENT paper instead of mimalloc's
# retain-the-high-water default — the property a persistent conversion worker
# needs. Used for the mimalloc-vs-jemalloc A/B and the recommended harness build.
tikv-jemallocator = { version = "0.7", optional = true }

[dev-dependencies]
# Line-diff engine for tests/90_latexmlpost.rs's golden comparison — the
# in-process replacement for the old `bash -c "diff <(xmllint --format …)"`
# pipeline (which required a Unix userland and silently vacuous-passed when
# xmllint was missing). LCS-based, so counts match GNU diff's `<`/`>` lines.
similar = "2"

# Metadata for `cargo deb` (https://github.com/kornelski/cargo-deb).
# Drives `tools/make_release.sh` step 6: `cargo deb --no-build --profile maxperf -p latexml`.
# Runtime apt dependencies match the README's "Build from source" recipe minus
# the `-dev` headers (those are compile-time only). The deb only ships the
# `latexml_oxide` binary — XSLT, CSS, JavaScript and RelaxNG schemas are
# embedded at build time, so no `resources/` payload is shipped alongside.
[package.metadata.deb]
name = "latexml-oxide"
maintainer = "Deyan Ginev <deyan.ginev@gmail.com>"
copyright = "2016-2026 Deyan Ginev. CC0 1.0 Universal."
license-file = ["../LICENSE", "0"]
extended-description = """\
A Rust port of LaTeXML — converts LaTeX documents to accessible web
formats (HTML5, XHTML, EPUB3, JATS). Drop-in replacement for the
upstream Perl tool with significant throughput improvements on the
arXiv corpus."""
# `$auto` runs dpkg-shlibdeps on the packaged binary, deriving the exact,
# versioned linked-library deps so the list never drifts from what we link.
# Since the release build STATICALLY links libxml2, libxslt and libkpathsea
# (tools/build_static_libxml.sh + build_static_kpathsea.sh), those no longer
# appear — `$auto` resolves to just the glibc family (libc6, libgcc-s1), and the
# package carries NO versioned libxml2/libxslt SONAME dependency (so it installs
# on any libxml2 era — .so.2 and .so.16 alike). The remaining entries are
# appended manually — they are runtime data/tools, not linked libraries:
# The external tools the binary shells out to (audited from every `Command::new`
# in the workspace) are ALL hard Depends — none are bundled, and each covers a
# distinct branch of the graphics / LaTeX-image / TeX-resolution pipeline, so the
# tool works out of the box rather than silently degrading:
#   * imagemagick — `convert` (raster image conversion).
#   * mupdf-tools — `mutool` (primary PDF graphics processor).
#   * poppler-utils — `pdftocairo`/`pdftoppm` (vector-SVG PDF conversion).
#   * ghostscript — `gs`/`ps2pdf` (PDF/PostScript conversion).
#   * dvipng, dvisvgm — the `--mathimages`/LaTeX-image raster + vector paths.
#   * texlive-* — the texmf trees + `kpsewhich`/`pdflatex`/`latex`/`tftopl` the
#     engine resolves against.
depends = "$auto, imagemagick, mupdf-tools, poppler-utils, ghostscript, dvipng, dvisvgm, texlive-latex-base, texlive-latex-extra, texlive-science"
# NOTE: no inkscape suggestion. The vector-SVG path uses only mutool → pdftocairo;
# a heavyweight GTK-stack inkscape fallback was deliberately dropped (raster PNG
# is the fallback instead).
section = "tex"
priority = "optional"
assets = [
  ["../target/maxperf/latexml_oxide", "usr/bin/", "755"],
  ["../README.md", "usr/share/doc/latexml-oxide/README", "644"],
  ["../CHANGELOG.md", "usr/share/doc/latexml-oxide/CHANGELOG", "644"],
  ["../LICENSE", "usr/share/doc/latexml-oxide/copyright", "644"],
  ["../THIRD-PARTY-NOTICES", "usr/share/doc/latexml-oxide/THIRD-PARTY-NOTICES", "644"],
]