[package]
name = "latexml_package"
version = "0.4.0"
edition = "2021"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Bindings and related infrastructure for core processing"

[lib]
crate-type = ["lib"]

[dependencies]
once_cell = "1.17.0"
regex = "1.7.1"
log = "0.4"
libxml = "0.3.9"
chrono = "0.4"
unicode-normalization = "0.1.7"
string-interner = {version = "0.20.0", default-features = false, features = ["std", "backends","inline-more"]}
rustc-hash="2.0.0"
base64 = "0.22"
latexml_codegen = {path = "../latexml_codegen"}
latexml_core = { path = "../latexml_core" }
latexml_engine = { path = "../latexml_engine" }
