[package]
name = "latexml_package"
version = "0.5.0"
edition = "2024"
license = "CC0-1.0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Bindings and related infrastructure for core processing"

[lints]
workspace = true

[lib]
crate-type = ["lib"]

[features]
# Source-map precision build — propagates to latexml_core. Enable via
# `latexml_oxide/token-locators`. See docs/SOURCE_PROVENANCE.md §3.1.1.
token-locators = ["latexml_core/token-locators"]

[dependencies]
regex = { version = "1.7.1", default-features = false, features = ["std", "perf", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script"] }  # DEP-10
log = "0.4"
libxml = "0.3.15"
rustc-hash = "2.0.0"
base64 = "0.22"
latexml_codegen = { path = "../latexml_codegen" }
latexml_core = { path = "../latexml_core" }
winnow = "1.0"
latexml_engine = { path = "../latexml_engine" }
