[package]
name = "latexml_post"
version = "0.2.0"
edition = "2021"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Post-processing pipeline for latexml_oxide (Rust port of LaTeXML::Post)"

[lib]
name = "latexml_post"
crate-type = ["lib"]

[[bin]]
name = "latexmlpost_oxide"
path = "bin/latexmlpost_oxide.rs"

[dependencies]
libxml = "0.3.10"
libxslt = "0.1.3"
log = "0.4"
regex = "1.7.1"
unicode-normalization = "0.1.25"
imagesize = "0.14"
rustc-hash = "2.0.0"
# Telemetry-only — used in process_chain to attribute time to the
# correct Phase based on each processor's get_name(). See docs/TELEMETRY.md.
latexml_core = {path = "../latexml_core"}

# setsid + killpg in graphics.rs `run_with_timeout` — kills convert's gs
# grandchild on timeout instead of orphaning it for 10+ minutes.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
