[package]
name = "latexml_post"
version = "0.3.0"
edition = "2024"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Post-processing pipeline for latexml_oxide (Rust port of LaTeXML::Post)"

[lib]
name = "latexml_post"
crate-type = ["lib"]

[dependencies]
libxml = "0.3.12"
libxslt = "0.1.3"
log = "0.4"
regex = { version = "1.7.1", default-features = false, features = ["std", "perf", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script"] }  # DEP-10
unicode-normalization = "0.1.25"
imagesize = "0.14"
rustc-hash = "2.0.0"
# Content-addressed graphics cache (see src/graphics_cache.rs). SHA-256
# fingerprints (source bytes + render opts). Only `Digest`+`Sha256` are
# used; `default-features = false` skips the `oid` feature (DER object-id
# constants for X.509-style usage) which we never touch.
sha2 = { version = "0.11", default-features = false }
# `pack` module: zip-bundle final output (HTML + log + status + resource dir +
# optional telemetry). Used by both `latexml_oxide` and `cortex_worker`.
# Matches the binary-side feature slim: deflate-only, no aes/bzip2/zstd/lzma.
# `flate2` is the deflate backend selected by zip's `deflate-flate2` feature
# (zip 8 expects the consumer to add it explicitly; the feature only flips
# the routing inside zip itself).
zip = { version = "8", default-features = false, features = ["deflate-flate2", "time"] }
flate2 = "1"
# Telemetry-only — used in process_chain to attribute time to the
# correct Phase based on each processor's get_name(). See docs/TELEMETRY.md.
latexml_core = {path = "../latexml_core"}

# setsid + killpg in graphics.rs `run_with_timeout` — kills convert's gs
# grandchild on timeout instead of orphaning it for 10+ minutes.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# `pack` module tests stage resource directories in a TempDir and read
# the produced zip back to assert membership + reproducible timestamps.
tempfile = "3"
