[package]
name = "rtx"
version = "0.1.21"
edition = "2018"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
license = "CC0"
homepage = "https://github.com/dginev/rtx"
repository = "https://github.com/dginev/rtx"
readme = "README.md"
description = "A TeX to XML/HTML/ePub converster: a LaTeXML reimplementation in Rust"

[[bin]]
name = "rtx"
path = "src/main.rs"

[dependencies]
log = "0.4"
rtx_codegen = {path = "../rtx_codegen"}
rtx_core = {path = "../rtx_core"}
rtx_package = {path = "../rtx_package"}
rtx_contrib = {path = "../rtx_contrib"}