[package]
name = "rtx"
version = "0.2.0"
edition = "2018"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
license = "CC0"
homepage = "https://github.com/dginev/rtx"
repository = "https://github.com/dginev/rtx"
readme = "README.md"
description = "A TeX to XML/HTML/ePub converster: a LaTeXML reimplementation in Rust"

[[bin]]
name = "rtx"
path = "src/main.rs"

[[bin]]
name = "rtxmath"
path = "bin/rtx_math.rs"

[[bench]]
name = "integration_benchmarks"
harness = false

[dev-dependencies]
criterion = "0.3.0"

[dependencies]
log = "0.4"
libxml = "0.3.0"
lazy_static = "1.0"
regex = "1.5.5"
glob = "0.3"
rtx_codegen = {path = "../rtx_codegen"}
rtx_core = {path = "../rtx_core"}
rtx_package = {path = "../rtx_package"}
rtx_contrib = {path = "../rtx_contrib"}
rtx_math_parser = {path = "../rtx_math_parser"}
