[package]
name = "rtx"
version = "0.3.0"
edition = "2021"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
license = "CC0"
homepage = "https://github.com/dginev/rtx"
repository = "https://github.com/dginev/rtx"
readme = "README.md"
description = "A TeX to XML/HTML/ePub converster: a LaTeXML reimplementation in Rust"

[[bin]]
name = "rtx"
path = "src/main.rs"

[[bin]]
name = "rtxmath"
path = "bin/rtx_math.rs"

[dependencies]
log = "0.4"
libxml = "0.3.2"
once_cell = "1.17.0"
regex = "1.7.1"
glob = "0.3"
phf = { version = "0.11.1", features = ["macros"] }
rustc-hash = "1.1.0"
rtx_codegen = {path = "../rtx_codegen"}
rtx_core = {path = "../rtx_core"}
rtx_package = {path = "../rtx_package"}
rtx_contrib = {path = "../rtx_contrib"}
rtx_math_parser = {path = "../rtx_math_parser"}