[package]
name = "rtx_codegen"
version = "0.1.6"
edition = "2018"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Syntax extension plugins for LaTeXML's binding language"

[lib]
name = "rtx_codegen"
proc-macro = true

[dependencies]
syn = "0.8.5"
quote = "0.3.15"
lazy_static = "1.0.0"
regex = "0.2.5"
rtx_core= { path = "../rtx_core" }