[package]
name = "rtx_codegen"
version = "0.2.2"
edition = "2018"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Syntax extension plugins for LaTeXML's binding language"

[lib]
name = "rtx_codegen"
proc-macro = true

[dependencies]
syn = "0.15"
proc-macro2 = "0.4"
quote = "0.6"
lazy_static = "1.0.0"
regex = "1.1.0"
rtx_core= { path = "../rtx_core" }