[package]
name = "rtx_codegen"
version = "0.2.4"
edition = "2021"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Syntax extension plugins for LaTeXML's binding language"

[lib]
name = "rtx_codegen"
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0.0"
quote = "1.0"
lazy_static = "1.0.0"
regex = "1.1.0"
rtx_core= { path = "../rtx_core" }