[package]
name = "rtx_contrib"
version = "0.1.3"
edition = "2018"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "User-contributed bindings for personal use"

[lib]
crate-type = ["rlib", "dylib", "staticlib"]

[dependencies]
rustc-serialize = "0.3"
glob = "0.2"
rand = "0.4"
time = "0.1"
lazy_static = "1.0.0"
regex = "0.2.5"
log = "0.4"
libxml = "0.2.6"
unidecode = "0.3.0"
rtx_core = {path = "../rtx_core"}
rtx_codegen = {path = "../rtx_codegen"}
rtx_package = {path = "../rtx_package"}