[package]
name = "rtx_contrib"
version = "0.1.3"
edition = "2018"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "User-contributed bindings for personal use"

[lib]
crate-type = ["lib"]

[dependencies]
rtx_core = {path = "../rtx_core"}
rtx_codegen = {path = "../rtx_codegen"}
rtx_package = {path = "../rtx_package"}