[package]
name = "rtx_core"
version = "0.1.16"
edition = "2021"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Core conversion capabilities of rtx"

[lib]
name = "rtx_core"
crate-type = ["lib"]

[dependencies]
glob = "0.3"
rand = "0.8"
time = "0.3"
lazy_static = "1.4"
regex = "1.7.1"
log = "0.4"
quote = "1.0"
proc-macro2 = "1.0"
ansi_term = "0.12"
libxml = "0.3.1"
dirs = "4.0"
encoding = "0.2"
kpathsea = "0.2.3"
unidecode = "0.3.0"
marpa = { git = "https://github.com/dginev/marpa", branch = "abstract_syntax_forests" }