[package]
name = "rtx_core"
version = "0.2.0"
edition = "2021"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Core conversion capabilities of rtx"

[lib]
name = "rtx_core"
crate-type = ["lib"]

[dependencies]
once_cell = "1.17.0"
regex = "1.7.1"
log = "0.4"
quote = "1.0"
proc-macro2 = "1.0"
ansi_term = "0.12"
libxml = "0.3.2"
dirs = "5.0"
kpathsea = "0.2.3"
unidecode = "0.3.0"
rustc-hash = "1.1.0"
parking_lot = "0.12.1"
string-interner = {version = "0.14.0", default-features = false, features = ["std", "backends","inline-more"]}
marpa = { git = "https://github.com/dginev/marpa", branch = "abstract_syntax_forests" }