[package]
name = "rtx_logger"
version = "0.1.0"
authors = ["Deyan Ginev <d.ginev@jacobs-university.de>"]
description = "LaTeXML logger flavour of Rust's log facade"
license = "CC0"
homepage = "https://github.com/dginev/rtx"
repository = "https://github.com/dginev/rtx"
readme = "README.md"

[lib]
name = "rtx_logger"

[dependencies]
log = "0.3"