[package]
name = "rtx_macros"
version = "0.1.0"
authors = ["Deyan Ginev <d.ginev@jacobs-university.de>"]

[lib]
name = "rtx_macros"
plugin = true

[dependencies.rtx_core]
path = "../rtx_core"

[dependencies]
regex = "0.1.66"
lazy_static = "0.1.*"
aster = "*"
syntex_syntax = { version = "*", optional = true }
