[package]
name = "rtx_math_parser"
version = "0.1.0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
edition = "2021"

[lib]
name = "rtx_math_parser"
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
libxml = "0.3.0"
regex = "1.5.5"
marpa = { git = "https://github.com/dginev/marpa", branch = "abstract_syntax_forests" }
lazy_static = "1.4"
rtx_package = { path= "../rtx_package" }