[package]
name = "rtx_math_parser"
version = "0.1.2"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
edition = "2021"

[lib]
name = "rtx_math_parser"
crate-type = ["lib"]

[dependencies]
libxml = "0.3.2"
regex = "1.7.1"
log = "0.4"
marpa = { git = "https://github.com/dginev/marpa", branch = "abstract_syntax_forests" }
once_cell = "1.17.0"
rustc-hash = "1.1.0"
rtx_core = { path= "../rtx_core" }
string-interner = {version = "0.15.0", default-features = false, features = ["std", "backends","inline-more"]}