[package]
name = "rtx_package"
version = "0.3.0"
edition = "2018"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Bindings and related infrastructure for core processing"

[lib]
crate-type = ["lib"]

[dependencies]
glob = "0.3.0"
rand = "0.7.0"
time = "0.2.0"
lazy_static = "1.0.0"
regex = "1.1.0"
log = "0.4.0"
libxml = "0.2.6"
unidecode = "0.3.0"
chrono = "0.4.6"
rtx_codegen = {path = "../rtx_codegen"}
rtx_core = {path = "../rtx_core"}

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "integration_benchmarks"
harness = false
