[package]
name = "rtx_package"
version = "0.3.1"
edition = "2021"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Bindings and related infrastructure for core processing"

[lib]
crate-type = ["lib"]

[dependencies]
glob = "0.3"
rand = "0.8"
time = "0.3"
lazy_static = "1.0"
regex = "1.7.1"
log = "0.4"
libxml = "0.3.2"
chrono = "0.4"
unicode-normalization = "0.1.7"
rtx_codegen = {path = "../rtx_codegen"}
rtx_core = {path = "../rtx_core"}
