[package]
name = "rustexml_core"
version = "0.1.0"
authors = ["Deyan Ginev <d.ginev@jacobs-university.de>"]

[lib]
name = "rustexml_core"
crate-type = ["rlib", "dylib", "staticlib"]

[dependencies.libxml]
git = "https://github.com/KWARC/rust-libxml.git"

[dependencies.libarchive-sys]
git = "https://github.com/dginev/libarchive-sys.git"

[dependencies]
libc = "~0.1"
rustc-serialize = "0.3"
glob = "*"
rand = "*"
tempfile = "*"
time = "*"
lazy_static = "0.1.*"
regex = "0.1.66"
